--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   google_fonts: ^6.1.0
   flutter_svg: ^2.0.9
   http: ^1.1.0
+  firebase_core: ^2.23.0
+  firebase_auth: ^4.14.1
+  google_sign_in: ^6.1.6
 
 dev_dependencies:
   flutter_test:
