--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_core: ^2.23.0
   firebase_auth: ^4.14.1
   google_sign_in: ^6.1.6
+  dio: ^5.3.4
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
